# RoboticsProject

./: .gitignore  .gitmodules  README.md  pull.sh  run.sh  test.cfg  tmp  todo.txt  vision.py
cpp_publisher/: CMakeLists.txt  package.xml  remove.sh
cpp_publisher/msg/: BlockInfo.msg  Coordinates.msg  MoveOperation.msg
cpp_publisher/src/: frame2frame.cpp  kinematicsUr5.cpp  move.cpp  planner.cpp  testUR5b.cpp
cpp_scripts/: a.out  eigenPath  forwardKin.cpp  move.cpp
cpp_scripts/forwardKin/: a.out  forwardKin.cpp  forwardKinUR5.cpp
cpp_scripts/invKin/: inverseKin.cpp
cpp_scripts/kinematics/: a.out  control.cpp  kinematicsUr5.cpp  testUR5b.cpp
customWorldCreation/: generateWorld.cpp
dataset/: my_mesh.world
html/: classes.html  dir_9f266c1169b5da7942331ebf960b35ff.html  dir_d4d91f215e6b5f5d7ecdaf3737396a41.html  files.html  functions.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  kinematicsUr5_8cpp.html  menudata.js  namespaces.html  planner_8cpp.html  structEEPose-members.html  structEEPose.html  vision_8py.html
html/roboticsProject/: annotated.html  dir_850da9c3cf7060362a820b1a22cd2c3d.html  dir_d7ae381ca96391b6fe9345db16753b17.html  frame2frame_8cpp.html  functions_vars.html  index.html  move_8cpp.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacevision.html  vision_8py.html
html/search/: all_10.js  all_11.js  all_13.js  all_3.js  all_4.js  all_5.js  all_8.js  all_b.js  all_c.js  all_f.js  defines_0.js  defines_1.js  defines_3.js  defines_6.js  defines_7.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_7.js  functions_a.js  functions_c.js  functions_d.js  variables_0.js  variables_1.js  variables_10.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_b.js  variables_c.js  variables_d.js
image_transport_ws/: package.xml
image_transport_ws/src/: my_subscriber.cpp
latex/: annotated.tex  dir_850da9c3cf7060362a820b1a22cd2c3d.tex  dir_9f266c1169b5da7942331ebf960b35ff.tex  dir_d4d91f215e6b5f5d7ecdaf3737396a41.tex  dir_d7ae381ca96391b6fe9345db16753b17.tex  files.tex  frame2frame_8cpp.tex  index.tex  kinematicsUr5_8cpp.tex  move_8cpp.tex  namespaces.tex  namespacevision.tex  planner_8cpp.tex  refman.tex  structEEPose.tex  vision_8py.tex
matlabScripts/: anthropomorphic0.m  anthropomorphic1.m  anthropomorphicInverse.m  anthropomorphicTrans.m  ascriptAnthroAnim.m  computeOrientationErrorW.m  conti.m  eulerRot.m  homogeneousTrans.m  invDiffKinematiControl.m  invDiffKinematiControlComplete.m  invDiffKinematiControlCompleteAngleAxis.m  invDiffKinematiControlRedundancy.m  invDiffKinematic.m  invDiffKinematicControlSim.m  invDiffKinematicControlSimComplete.m  invDiffKinematicControlSimCompleteAngleAxis.m  invDiffKinematicControlSimRedundancy.m  p2pMotionPlan.m  scriptDraw  scriptDraw.m  scriptDrawEuler.m  scriptDrawHom.m  scriptDrawHom1.m  scriptTestTriad.m  scriptTransformTest.m  scriptTransformTestLoop.m  scriptTransformTriads.m  testScriptAnthro0.m  testScriptAnthroInverse.m  testScriptAnthroTrans.m  testScritpAnthro1.m  testUr51.m  testUr52.m  testUr53.m  testUr53b.m  testUr54.m  testUr55.m  testUr56.m  testUr56b.m  (+10 more)
models/: blocchiAssegnati.txt  data.yaml  megaBlockList.txt  screenShotScript.py
py_publisher/: CMakeLists.txt  package.xml
py_publisher/msg/: BlockDetected.msg
py_publisher/src/: vision.py
py_scripts/: changeName.py  datasetGenerator.py  extractSubset.py  listImages.py  mergeDataset.py  organizer.py  untura.py  unturaUntissima.py
robot_control/base_controllers/: test_gazebo.mat
robot_control/lab_exercises/: L8_admittance.py.save
robot_descriptions/aliengo_description/: CMakeLists.txt
robot_descriptions/aliengo_description/config/: ros_impedance_controller.yaml
robot_descriptions/aliengo_description/scripts/: go0_gennaro
robot_descriptions/climbingrobot_description/: CMakeLists.txt
robot_descriptions/climbingrobot_description/config/: ros_impedance_controller_climbingrobot2.yaml
robot_descriptions/climbingrobot_description/launch/: rviz.launch  upload.launch
robot_descriptions/climbingrobot_description/media/materials/scripts/: rocks.material
robot_descriptions/climbingrobot_description/rviz/: conf.rviz
robot_descriptions/climbingrobot_description/scripts/: checkModel.py  climber_simu.py  test_climber_urdf.py
robot_descriptions/climbingrobot_description/urdf/: climbingrobot2.srdf  climbingrobot2.transmission.xacro  climbingrobot2.xacro  climbingrobot_slider.srdf  climbingrobot_slider.xacro
robot_descriptions/hyq_description/: CMakeLists.txt
robot_descriptions/jumpleg_description/: CMakeLists.txt
robot_descriptions/solo_description/: CMakeLists.txt  setup.py
robot_descriptions/solo_fw_description/: CMakeLists.txt
robot_descriptions/starbot_description/: CMakeLists.txt
robot_hardware_interfaces/aliengo_hardware_interface/: CMakeLists.txt  package.xml
robot_hardware_interfaces/aliengo_hardware_interface/aliengo_hal/: CMakeLists.txt
robot_hardware_interfaces/aliengo_hardware_interface/include/aliengo_interface/: aliengo_robot_hw.hpp  aliengo_ros_control.hpp
robot_hardware_interfaces/aliengo_hardware_interface/src/: aliengo_robot_hw.cpp  aliengo_ros_control.cpp  aliengo_ros_node.cpp
robot_urdf/: ur5.srdf  ur5.urdf
robot_urdf/generated_urdf/: climbingrobot.urdf  go1.urdf  myrobot.urdf  solo.urdf  ur5.urdf
ros_impedance_controller/: CMakeLists.txt
ros_impedance_controller/launch/: ros_impedance_controller_floating.launch  ros_impedance_controller_ur5.launch
ros_impedance_controller/src/: controller.cpp
ros_impedance_controller/worlds/: customWorld.world  lego.world  tavolo_megablock.world
showZedImg/: CMakeLists.txt
usefulScript/blocksSdf/: readme.txt
vision/blenderScripts/: datasetGen.py
vision/py_scripts/: createDataset.py  listImages.py  organize&mergeDatasets.py  testVision.py  tmp.py  untura.py  vision.py  zedCameraAPI.py
visionScripts/models/: megaBlockList.txt
vision_publisher/: vision.py
(+78 files in other folders)
