<?xml version="1.0"?>
<package format="2">
  <name>py_publisher</name>
  <version>0.0.0</version>
  <description>The py_publisher package</description>

  <maintainer email="stefano@todo.todo">stefano</maintainer>


  <license>TODO</license>

  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export></export>
</package>
